# cis194

./: README.org  cis194.cabal
app/: Main.hs
src/: AParser2013.hs  Adt03.hs  Fp02.hs  Gdat10.hs  IO05.hs  Intro01.hs  Lazy06.hs  Monad07.hs  TypeClass04.hs
test/: Spec.hs
