name:                cis194
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Enzo-Liu/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Enzo Liu
maintainer:          liuenze6516@gmail.com
copyright:           Copyright: (c) 2016 Enzo Liu
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Intro01
                     , Fp02
                     , Adt03
                     , TypeClass04
                     , IO05
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , vector
                     , random
                     , MonadRandom
                     , containers
                     , aeson
                     , text
  default-language:    Haskell2010

executable cis194-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cis194
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Enzo-Liu/cis194
